--- a/META.yml
+++ b/META.yml
@@ -18,11 +18,11 @@ no_index:
     - inc
     - t
 requires:
-  Bundle::LWP: 0
   HTTP::Lite: 0
   LWP::Simple: 0
+  LWP::UserAgent: 0
   WWW::Mechanize: 0
   WWW::Mechanize::TreeBuilder: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.27
+version: 0.28
