--- a/META.yml
+++ b/META.yml
@@ -8,7 +8,7 @@ build_requires:
   Test::More: '0'
 configure_requires:
   ExtUtils::MakeMaker: '0'
-  Module::Build::Tiny: '0.037'
+  Module::Build::Tiny: '0.038'
 dynamic_config: 0
 generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142060'
 license: perl
@@ -22,22 +22,11 @@ no_index:
     - xt
     - examples
     - share
-optional_features:
-  WebCrawling:
-    description: 'Web Crawling'
-    requires:
-      HTTP::Thin: '0'
-      HTTP::Tiny: '0'
-      LWP::Simple: '0'
-      LWP::UserAgent: '0'
-      WWW::Mechanize: '0'
-      WWW::Mechanize::TreeBuilder: '0'
-      WWW::Selenium: '0'
 provides:
   Task::Kensho::WebCrawling:
     file: lib/Task/Kensho/WebCrawling.pm
-    version: '0.37'
-recommends:
+    version: '0.38'
+requires:
   HTTP::Thin: '0'
   HTTP::Tiny: '0'
   LWP::Simple: '0'
@@ -45,7 +34,6 @@ recommends:
   WWW::Mechanize: '0'
   WWW::Mechanize::TreeBuilder: '0'
   WWW::Selenium: '0'
-requires:
   perl: '5.006'
   strict: '0'
   warnings: '0'
@@ -53,10 +41,10 @@ resources:
   bugtracker: https://github.com/EnlightenedPerlOrganisation/task-kensho/issues
   homepage: https://github.com/EnlightenedPerlOrganisation/task-kensho
   repository: https://github.com/EnlightenedPerlOrganisation/task-kensho.git
-version: '0.37'
+version: '0.38'
 x_Dist_Zilla:
   perl:
-    version: '5.021002'
+    version: '5.021003'
   plugins:
     -
       class: Dist::Zilla::Plugin::Git::NextVersion
@@ -68,7 +56,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: =inc::SubTaskPluginBundle/Git::NextVersion
-      version: '2.023'
+      version: '2.024'
     -
       class: Dist::Zilla::Plugin::Git::GatherDir
       config:
@@ -77,7 +65,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: =inc::SubTaskPluginBundle/Git::GatherDir
-      version: '2.023'
+      version: '2.024'
     -
       class: Dist::Zilla::Plugin::MungeFile::WithConfigFile
       config:
@@ -121,17 +109,18 @@ x_Dist_Zilla:
             - ':ExecFiles'
           skips: []
       name: =inc::SubTaskPluginBundle/Test::Compile
-      version: '2.045'
+      version: '2.046'
     -
       class: Dist::Zilla::Plugin::Test::NoTabs
       config:
         Dist::Zilla::Plugin::Test::NoTabs:
+          filename: xt/author/no-tabs.t
           finder:
             - ':InstallModules'
             - ':ExecFiles'
             - ':TestFiles'
       name: =inc::SubTaskPluginBundle/Test::NoTabs
-      version: '0.08'
+      version: '0.09'
     -
       class: Dist::Zilla::Plugin::EOLTests
       name: =inc::SubTaskPluginBundle/EOLTests
@@ -168,9 +157,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Test::Kwalitee
       config:
         Dist::Zilla::Plugin::Test::Kwalitee:
+          filename: xt/release/kwalitee.t
           skiptest: []
       name: =inc::SubTaskPluginBundle/Test::Kwalitee
-      version: '2.08'
+      version: '2.11'
     -
       class: Dist::Zilla::Plugin::MojibakeTests
       name: =inc::SubTaskPluginBundle/MojibakeTests
@@ -187,10 +177,10 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Test::CleanNamespaces
       config:
         Dist::Zilla::Plugin::Test::CleanNamespaces:
-          filename: xt/release/clean-namespaces.t
+          filename: xt/author/clean-namespaces.t
           skips: []
       name: =inc::SubTaskPluginBundle/Test::CleanNamespaces
-      version: '0.005'
+      version: '0.006'
     -
       class: Dist::Zilla::Plugin::Git::Describe
       name: =inc::SubTaskPluginBundle/Git::Describe
@@ -280,15 +270,11 @@ x_Dist_Zilla:
               name: Contributors
               version: '0.008'
       name: =inc::SubTaskPluginBundle/PodWeaver
-      version: '4.005'
+      version: '4.006'
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: =inc::SubTaskPluginBundle/NextRelease
       version: '5.020'
-    -
-      class: Dist::Zilla::Plugin::ReadmeAnyFromPod
-      name: =inc::SubTaskPluginBundle/ReadmeAnyFromPod
-      version: '0.142250'
     -
       class: Dist::Zilla::Plugin::GithubMeta
       name: =inc::SubTaskPluginBundle/GithubMeta
@@ -313,32 +299,11 @@ x_Dist_Zilla:
           inherit_version: '1'
           meta_noindex: '1'
       name: =inc::SubTaskPluginBundle/MetaProvides::Package
-      version: '2.000004'
+      version: '2.001002'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: =inc::SubTaskPluginBundle/MetaConfig
       version: '5.020'
-    -
-      class: Dist::Zilla::Plugin::OptionalFeature
-      config:
-        Dist::Zilla::Plugin::OptionalFeature:
-          always_recommend: '1'
-          default: '1'
-          description: 'Web Crawling'
-          name: WebCrawling
-          phase: runtime
-          prereqs:
-            HTTP::Thin: '0'
-            HTTP::Tiny: '0'
-            LWP::Simple: '0'
-            LWP::UserAgent: '0'
-            WWW::Mechanize: '0'
-            WWW::Mechanize::TreeBuilder: '0'
-            WWW::Selenium: '0'
-          require_develop: '0'
-          type: requires
-      name: =inc::SubTaskPluginBundle/OptionalFeature
-      version: '0.014'
     -
       class: Dist::Zilla::Plugin::Git::Contributors
       config:
@@ -356,10 +321,6 @@ x_Dist_Zilla:
       name: =inc::SubTaskPluginBundle/AutoPrereqs
       version: '5.020'
     -
-      class: Dist::Zilla::Plugin::Prereqs::AuthorDeps
-      name: =inc::SubTaskPluginBundle/Prereqs::AuthorDeps
-      version: '0.003'
-    -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: =inc::SubTaskPluginBundle/MinimumPerl
       version: '1.003'
@@ -367,9 +328,9 @@ x_Dist_Zilla:
       class: Dist::Zilla::Plugin::Prereqs
       config:
         Dist::Zilla::Plugin::Prereqs:
-          phase: develop
+          phase: runtime
           type: requires
-      name: =inc::SubTaskPluginBundle/installer_requirements
+      name: '=inc::SubTaskPluginBundle/task components'
       version: '5.020'
     -
       class: Dist::Zilla::Plugin::RunExtraTests
@@ -386,11 +347,27 @@ x_Dist_Zilla:
       name: =inc::SubTaskPluginBundle/MakeMaker::Fallback
       version: '0.013'
     -
-      class: Dist::Zilla::Plugin::ModuleBuildTiny
+      class: Dist::Zilla::Plugin::ModuleBuildTiny::Fallback
       config:
+        Dist::Zilla::Plugin::ModuleBuildTiny::Fallback:
+          plugins:
+            -
+              class: Dist::Zilla::Plugin::ModuleBuild
+              config:
+                Dist::Zilla::Role::TestRunner:
+                  default_jobs: 1
+              name: ModuleBuildTiny::Fallback
+              version: '5.020'
+            -
+              class: Dist::Zilla::Plugin::ModuleBuildTiny
+              config:
+                Dist::Zilla::Role::TestRunner:
+                  default_jobs: 1
+              name: ModuleBuildTiny::Fallback
+              version: '0.007'
         Dist::Zilla::Role::TestRunner:
           default_jobs: 1
-      name: =inc::SubTaskPluginBundle/ModuleBuildTiny
+      name: =inc::SubTaskPluginBundle/ModuleBuildTiny::Fallback
       version: '0.006'
     -
       class: Dist::Zilla::Plugin::CheckSelfDependency
@@ -400,14 +377,6 @@ x_Dist_Zilla:
             - ':InstallModules'
       name: =inc::SubTaskPluginBundle/CheckSelfDependency
       version: '0.007'
-    -
-      class: Dist::Zilla::Plugin::Run::AfterBuild
-      config:
-        Dist::Zilla::Plugin::Run::Role::Runner:
-          run:
-            - "bash -c \"if [[ `dirname %d` != .build ]]; then test -e .ackrc && grep -q -- '--ignore-dir=%d' .ackrc || echo '--ignore-dir=%d' >> .ackrc; fi\""
-      name: =inc::SubTaskPluginBundle/Run::AfterBuild
-      version: '0.024'
     -
       class: Dist::Zilla::Plugin::CheckStrictVersion
       name: =inc::SubTaskPluginBundle/CheckStrictVersion
@@ -424,7 +393,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: ..
       name: '=inc::SubTaskPluginBundle/initial check'
-      version: '2.023'
+      version: '2.024'
     -
       class: Dist::Zilla::Plugin::Git::CheckFor::MergeConflicts
       config:
@@ -463,7 +432,7 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::Repo:
           repo_root: ..
       name: '=inc::SubTaskPluginBundle/after tests'
-      version: '2.023'
+      version: '2.024'
     -
       class: Dist::Zilla::Plugin::CheckIssues
       name: =inc::SubTaskPluginBundle/CheckIssues
@@ -477,14 +446,6 @@ x_Dist_Zilla:
       name: =inc::SubTaskPluginBundle/ArchiveRelease
       version: '4.00'
     -
-      class: Dist::Zilla::Plugin::Run::AfterRelease
-      config:
-        Dist::Zilla::Plugin::Run::Role::Runner:
-          run:
-            - 'rm -f README.md'
-      name: '=inc::SubTaskPluginBundle/remove old READMEs'
-      version: '0.024'
-    -
       class: Dist::Zilla::Plugin::Git::Commit
       config:
         Dist::Zilla::Plugin::Git::Commit:
@@ -495,13 +456,24 @@ x_Dist_Zilla:
         Dist::Zilla::Role::Git::DirtyFiles:
           allow_dirty:
             - Changes
-            - README.md
           allow_dirty_match: []
           changelog: Changes
         Dist::Zilla::Role::Git::Repo:
           repo_root: .
       name: =inc::SubTaskPluginBundle/Git::Commit
-      version: '2.023'
+      version: '2.024'
+    -
+      class: Dist::Zilla::Plugin::Clean
+      name: =inc::SubTaskPluginBundle/Clean
+      version: '0.07'
+    -
+      class: Dist::Zilla::Plugin::Prereqs
+      config:
+        Dist::Zilla::Plugin::Prereqs:
+          phase: develop
+          type: requires
+      name: inc::SubTaskPluginBundle/::Role::BundleDeps
+      version: '5.020'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
